2011-07-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Don't use uhci outside of x86.

2011-07-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Add missing quotes.

2011-07-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu.c (grub_menu_execute_entry): Fix NULL
	dereference.

2011-07-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/pata.c (grub_pata_readwrite): Add missing wait.

2011-07-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/video.h: add missing EXPORT_FUND on
	grub_video_edid_checksum and grub_video_edid_preferred_mode.

2011-07-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/mips/kernel.h: Fix define conflict.

2011-07-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/cache_flush.S [GRUB_MACHINE_MIPS_LOONGSON]: Flush
	all four ways.

2011-07-21  Colin Watson  <cjwatson@ubuntu.com>

	Preferred resolution detection for VBE.

	* grub-core/video/video.c (grub_video_edid_checksum): New function.
	(grub_video_edid_preferred_mode): Likewise.  Try EDID followed by
	the Flat Panel extension, in line with the X.org VESA driver.
	* grub-core/video/i386/pc/vbe.c (grub_vbe_bios_get_flat_panel_info):
	New function.
	(grub_vbe_bios_get_ddc_capabilities): Likewise.
	(grub_vbe_bios_read_edid): Likewise.
	(grub_vbe_get_preferred_mode): Likewise.
	(grub_video_vbe_setup): When the mode is "auto", try to get the
	preferred mode from VBE, and use the largest mode that is no larger
	than the preferred mode (some BIOSes expose a preferred mode that is
	not in their mode list!).  If this fails, fall back to 640x480 as a
	safe conservative choice.
	(grub_video_vbe_get_edid): New function.
	(grub_video_vbe_adapter): Add get_edid.
	* include/grub/video.h (struct grub_vbe_edid_info): New structure.
	(struct grub_video_adapter): Add get_edid.
	(grub_video_edid_checksum): Add prototype.
	(grub_video_edid_preferred_mode): Likewise.